# matrix

./: Cargo.toml  install.sh
lgs_lib/: Cargo.toml
lgs_lib/src/: lgs.rs  lgs_test.rs  lib.rs  matrix.rs
lgs_lib/src/lgs/: lgs_test.rs
lgs_lib/src/matrix/: matrix_create_test.rs  matrix_det_test.rs  matrix_linear_dependencies.rs  matrix_ops_test.rs  matrix_sub_test.rs  matrix_test.rs
lgs_lib/src/matrix/matrix/: ops.rs
lgs_lib/src/matrix/test/: matrix_det_test.rs  matrix_sub_test.rs
src/: lgs.rs  main.rs  matrix.rs
src/lgs/: lgs_test.rs
src/matrix/: matrix_test.rs
