[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2021"
version ="0.1.0"
name= "matrix"
path = "src/main.rs"

[dependencies]
bencher = "0.1.5"
json = "0.12.4"
structopt = { version = "0.3.26", default-features = false }
